--- a/archetype/assets/views/layout.jade
+++ b/archetype/assets/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='../static/css/site.css')
+    link(rel='stylesheet', href='#{staticUrl}/css/site.css')
   body
     include _header
     block content
